...
  "goodDay": "Good day, {name}",
  "@goodDay": {
    "placeholders": {
      "name": { "type": "String" }
    }
  },
  "headWorkspace": "Head Distributor workspace",
  "employeeWorkspace": "Employee distribution workspace",

  "commonSave": "Save",
  "commonCancel": "Cancel",
  "commonAdd": "Add",
  "commonEdit": "Edit",
...
